# NCAA-Schedule

./: Cargo.toml
src/: data.json  main.rs  structs.rs
