[package]
name = "ncaa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.3", features = ["derive"] }
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
