[package]
name = "ncaa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
colored = "2.1.0"
